<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context=".twoactivities.ChallengeActivity">

    <Button
        android:id="@+id/first_button"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="launchFirst"
        android:text="@string/button_label_one" />

    <Button
        android:id="@+id/second_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:onClick="launchSecond"
        android:text="@string/button_label_two" />

    <Button
        android:id="@+id/third_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="launchThird"
        android:layout_marginHorizontal="16dp"
        android:text="@string/button_label_three" />
</LinearLayout>